# elerp

./: Dockerfile  README.md
.github/workflows/: docker-main.yml
server/: .gitignore  Cargo.toml
server/crates/area_module/: Cargo.toml
server/crates/area_module/src/: lib.rs
server/crates/elerp_common/: Cargo.toml
server/crates/elerp_common/src/: config.rs  inventory_module.rs  lib.rs  meta.rs  model.rs  order_module.rs
server/crates/elerp_common/src/area_module/model/: area.rs
server/crates/elerp_common/src/guest_order_module/: model.rs
server/crates/elerp_common/src/guest_order_module/model/: guest_order.rs
server/crates/elerp_common/src/inventory_module/: model.rs
server/crates/elerp_common/src/inventory_module/model/: inventory.rs  virtual_inventory.rs
server/crates/elerp_common/src/model/: action_type.rs  list_slice.rs  pagination.rs  web_socket_flags.rs
server/crates/elerp_common/src/order_category_module/: model.rs
server/crates/elerp_common/src/order_category_module/model/: order_category.rs
server/crates/elerp_common/src/order_module/: model.rs
server/crates/elerp_common/src/order_module/model/: order.rs
server/crates/elerp_common/src/order_payment_module/: model.rs
server/crates/elerp_common/src/order_payment_module/model/: order_payment.rs
server/crates/elerp_common/src/person_module/model/: person.rs
server/crates/elerp_common/src/sku_category_module/: model.rs
server/crates/elerp_common/src/sku_category_module/model/: sku_category.rs
server/crates/elerp_common/src/sku_module/: model.rs
server/crates/elerp_common/src/sku_module/model/: sku.rs
server/crates/elerp_common/src/statistical_module/model/: statistical_data.rs
server/crates/elerp_common/src/user_system/: model.rs
server/crates/elerp_common/src/user_system/model/: user_configure.rs  user_info.rs  user_permission.rs
server/crates/elerp_common/src/warehouse_module/: model.rs
server/crates/elerp_common/src/warehouse_module/model/: fn_argument.rs  warehouse.rs
server/crates/elerp_service/: Cargo.toml
server/crates/elerp_service/src/: custom_error.rs  erp.rs  erp_service.rs  lib.rs  user_service.rs  ws_service.rs
server/crates/elerp_service/src/model/: authenticated_user.rs  web_socket_flag_json.rs
server/crates/guest_order_module/: Cargo.toml
server/crates/guest_order_module/src/: lib.rs
server/crates/inventory_module/: Cargo.toml
server/crates/inventory_module/src/: lib.rs
server/crates/order_category_module/: Cargo.toml
server/crates/order_category_module/src/: lib.rs
server/crates/order_module/: Cargo.toml
server/crates/order_module/src/: lib.rs
server/crates/order_payment_module/: Cargo.toml
server/crates/order_payment_module/src/: lib.rs
server/crates/person_module/: Cargo.toml
server/crates/person_module/src/: lib.rs
server/crates/public_system/: Cargo.toml
server/crates/public_system/src/: db.rs  lib.rs
server/crates/sku_category_module/: Cargo.toml
server/crates/sku_category_module/src/: lib.rs
server/crates/sku_module/: Cargo.toml
server/crates/sku_module/src/: lib.rs
server/crates/statistical_module/: Cargo.toml
server/crates/statistical_module/src/: lib.rs
server/crates/user_system/: Cargo.toml
server/crates/user_system/src/: lib.rs
server/crates/warehouse_module/: Cargo.toml
server/crates/warehouse_module/src/: lib.rs
server/src/: config.rs  custom_error.rs  db.rs  erp.rs  main.rs  meta.rs  myhelper.rs  public_system.rs  services.rs  user_system.rs
server/src/erp/: area_module.rs  dependency.rs  guest_order_module.rs  inventory_module.rs  order_category_module.rs  order_module.rs  order_payment_module.rs  order_status_module.rs  person_module.rs  sku_category_module.rs  sku_module.rs  statistical_module.rs  util.rs  warehouse_module.rs
server/src/erp/area_module/: model.rs
server/src/erp/area_module/model/: area.rs
server/src/erp/guest_order_module/: model.rs
server/src/erp/guest_order_module/model/: guest_order.rs
server/src/erp/inventory_module/: model.rs
server/src/erp/inventory_module/model/: inventory.rs
server/src/erp/order_category_module/: model.rs
server/src/erp/order_category_module/model/: order_category.rs
server/src/erp/order_module/: model.rs
server/src/erp/order_module/model/: check_order_result.rs  order.rs
server/src/erp/order_payment_module/: model.rs
server/src/erp/order_payment_module/model/: order_payment.rs
server/src/erp/order_status_module/: model.rs
server/src/erp/order_status_module/model/: order_status.rs
server/src/erp/person_module/: model.rs
server/src/erp/person_module/model/: person.rs
server/src/erp/sku_category_module/: model.rs
server/src/erp/sku_category_module/model/: sku_category.rs
server/src/erp/sku_module/: model.rs
server/src/erp/sku_module/model/: sku.rs
server/src/erp/statistical_module/: model.rs
server/src/erp/statistical_module/model/: statistical_data.rs
server/src/erp/warehouse_module/: model.rs
server/src/erp/warehouse_module/model/: fn_argument.rs  warehouse.rs
server/src/public_system/: model.rs
server/src/public_system/model/: web_socket_flags.rs
server/src/services/: erp_service.rs  models.rs  user_service.rs  ws_service.rs
server/src/services/models/: authenticated_user.rs  clear_result.rs  web_socket_flag_json.rs
server/src/user_system/models/: user_configure.rs  user_info.rs  user_permission.rs
server/tests/: guest_order.rs  order.rs  order_payment.rs  person.rs  statistical.rs  test_area_module.rs  test_guest_order.rs  test_order_module.rs  test_order_payment_module.rs  user.rs  warehouse.rs
server/tests/common/: mod.rs
web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/docs/: index.md
web/docs/.vitepress/: config.ts
web/docs/ms/: index.md
web/docs/tutorial/: add-order.md  check-inventory.md  personal-configuration.md  quick-start.md  user.md
web/docs/zh/: index.md
web/src/: App.vue  AppError.ts  main.ts  router.ts  style.css  util.ts
web/src/api/: index.ts  models.ts
web/src/components/: CloseButton.vue  LanguageSelect.vue  LoadingCount.vue  (+4 more)
(+57 files in other folders)
