[package]
name = "elerp_common"
version = "0.1.0"
edition = "2021"

[dependencies]
tempfile = "3"
sqlx = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true }
strum = { workspace = true }
ahash = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
