[package]
name = "inventory_module"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
sqlx = { workspace = true }
public_system = { workspace = true }
elerp_common = { workspace = true }
order_module = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
utoipa ={ workspace = true }
ahash ={ workspace = true }
futures ={ workspace = true }
tokio ={ workspace = true }
rust_xlsxwriter = { workspace = true }