[package]
name = "public_system"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ahash = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
utoipa = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
strum = { workspace = true }
elerp_common = { workspace = true}